add avatar generation and animation

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
   <title>tic tac toe</title>
 </head>
 <body>
- <!--add a player choose emoji at start of game-->
-  <!-- <div id='choose-avatar'>
-    <p>Player 1 choose:</p>
-  </div> -->
+
+
 
   <div id='game'>
     <div id='who-won'></div>
@@ -35,6 +33,7 @@
     <div>
       <button id='new-game'>New Game</button>
       <button id='give-up'>Give Up</button>
+      <button id='add-smash'>Add Smash</button>
     </div>
       <p>player1 score: <span id='player1-score'>0</span></p>
       <p>player2 score: <span id='player2-score'>0</span></p>
