announcement with avatar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div>
       <button id='new-game'>New Game</button>
       <button id='give-up'>Give Up</button>
-      <button id='add-smash'>Add Smash</button>
+      <button id='add-smash'>Play Smash Bro?</button>
     </div>
       <p>player1 score: <span id='player1-score'>0</span></p>
       <p>player2 score: <span id='player2-score'>0</span></p>
