add player icon to score

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <button id='give-up'>Give Up</button>
       <button id='add-smash'>Play Smash Bro?</button>
     </div>
-      <p>player1 score: <span id='player1-score'>0</span></p>
-      <p>player2 score: <span id='player2-score'>0</span></p>
+      <p>Player 1 score: <span id='player1-score'>0</span></p>
+      <p>Player 2 score: <span id='player2-score'>0</span></p>
   </div>
 
 
