update pvp and ai using gamemode

--- a/index.html
+++ b/index.html
@@ -15,25 +15,29 @@
   <div id='game'>
     <div id='who-won'></div>
     <div class='rows'>
-      <button class='ttt-btn col0 row0 diag1' value=''></button>
-      <button class='ttt-btn col1 row0' value=''></button>
-      <button class='ttt-btn col2 row0 diag0' value=''></button>
+      <button id='1' class='ttt-btn col0 row0 diag1' value=''></button>
+      <button id='2' class='ttt-btn col1 row0' value=''></button>
+      <button id='3' class='ttt-btn col2 row0 diag0' value=''></button>
     </div>
     <div class='rows'>
-      <button class='ttt-btn col0 row1' value=''></button>
-      <button class='ttt-btn col1 row1 diag0 diag1' value=''></button>
-      <button class='ttt-btn col2 row1' value=''></button>
+      <button id='4' class='ttt-btn col0 row1' value=''></button>
+      <button id='5' class='ttt-btn col1 row1 diag0 diag1' value=''></button>
+      <button id='6' class='ttt-btn col2 row1' value=''></button>
     </div>
     <div class='rows'>
-      <button class='ttt-btn col0 row2 diag0' value=''></button>
-      <button class='ttt-btn col1 row2' value=''></button>
-      <button class='ttt-btn col2 row2 diag1' value=''></button>
+      <button id='7' class='ttt-btn col0 row2 diag0' value=''></button>
+      <button id='8' class='ttt-btn col1 row2' value=''></button>
+      <button id='9' class='ttt-btn col2 row2 diag1' value=''></button>
     </div>
 
     <div>
       <button id='new-game'>New Game</button>
       <button id='give-up'>Give Up</button>
       <button id='add-smash'>Play Smash Bro?</button>
+      <button id='test-empty2fill'>Test empty2fill</button>
+      <button id='ai-mode'>Play with Ai</button>
+      <button id='pvp-mode'>Pvp Mode</button>
+
     </div>
       <p>Player 1 score: <span id='player1-score'>0</span></p>
       <p>Player 2 score: <span id='player2-score'>0</span></p>
