add first turn hard coded for ai

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
   <div id='game'>
     <div id='who-won'></div>
     <div class='rows'>
-      <button id='1' class='ttt-btn col0 row0 diag1' value=''></button>
-      <button id='2' class='ttt-btn col1 row0' value=''></button>
-      <button id='3' class='ttt-btn col2 row0 diag0' value=''></button>
+      <button id='1' class='ttt-btn col0 row0 diag1 corner' value=''></button>
+      <button id='2' class='ttt-btn col1 row0 edge' value=''></button>
+      <button id='3' class='ttt-btn col2 row0 diag0 corner' value=''></button>
     </div>
     <div class='rows'>
-      <button id='4' class='ttt-btn col0 row1' value=''></button>
-      <button id='5' class='ttt-btn col1 row1 diag0 diag1' value=''></button>
-      <button id='6' class='ttt-btn col2 row1' value=''></button>
+      <button id='4' class='ttt-btn col0 row1 edge' value=''></button>
+      <button id='5' class='ttt-btn col1 row1 diag0 diag1 middle' value=''></button>
+      <button id='6' class='ttt-btn col2 row1 edge' value=''></button>
     </div>
     <div class='rows'>
-      <button id='7' class='ttt-btn col0 row2 diag0' value=''></button>
-      <button id='8' class='ttt-btn col1 row2' value=''></button>
-      <button id='9' class='ttt-btn col2 row2 diag1' value=''></button>
+      <button id='7' class='ttt-btn col0 row2 diag0 corner' value=''></button>
+      <button id='8' class='ttt-btn col1 row2 edge' value=''></button>
+      <button id='9' class='ttt-btn col2 row2 diag1 corner' value=''></button>
     </div>
 
     <div>
