ai dev in progress

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <button id='test-empty2fill'>Test empty2fill</button>
       <button id='ai-mode'>Play with Ai</button>
       <button id='pvp-mode'>Pvp Mode</button>
+      <button id='test-ai-choose-btn'>Test Ai Choose Btn</button>
+      <button id='test-first-ai-turn-btn'>Test firstAiTurn</button>
+      <button id='ai-turn'>Ai's turn</button>
 
     </div>
       <p>Player 1 score: <span id='player1-score'>0</span></p>
